--- a/src/css/components/modal.css
+++ b/src/css/components/modal.css
@@ -1,6 +1,6 @@
 .modal-container {
   position: fixed;
-  z-index: -1;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
@@ -15,7 +15,6 @@
 }
 
 .modal-container.visible {
-  z-index: 1100;
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
@@ -32,7 +31,7 @@
   left: 50%;
   font-family: var(--primary-font-family);
   text-align: center;
-  z-index: 100;
+  z-index: 1;
   width: 343px;
   position: fixed;
   padding: 64px 32px;
